test/failing/missing_paren_if.yadl
// RUN: DEFAULT

if (true ) {
 print(1 + 1)

print(1 + 1)

